jallib-next:
-----------

Released yyyy-mm-dd

Changes since 0.5.0

device files:
 - Added aliases for the first of two USARTs to be able to use the current (hardware) serial libs
 - Added device files for 16 extended midrange PICS (18/19[L]F18/19xx)
 - Revised memory specifications for _pic_accum and _pic_isr_w for some PICs
 - Added device files for 18f87j50 group of PICs

externals:
 - 23k256 moved "const byte SRAM_23K256_ALWAYS_SET_SPI_MODE = TRUE" from lib to sample files

peripherals:
 - serial_hw libraries support 16 bit baudrate register of eusart.

jal extension:
 -

samples:
 - added sample for writing and verifying 1024 bytes of eeprom with 18f6722
 - Added blink-a-led samples for 16 extended midrange PICS (18/19[L]F18/19xx)
 - Added 2 samples of serial comms with 16F1937 (different libraries and oscillators)
 - Added blink-a-led samples for 18f87j50 group of PICs

compiler:
 -


jallib-0.5.0:
------------

Released 2009-12-30

Changes since 0.4.0

device files:
 - device files created with MPLAB 8.43
 - over 50 new device files released
 - alias declarations added for access of Enhanced CCP modules as 'legacy' CCP modules
 - alias declarations added for access of SSP modules of 18Fs with midrange register names.
 - added declarations of pseudo variables for shared memory SFRs and their subfields for
   several high-end 18Fs.
 - changes in fuse_def declarations
   - reduced synomyms of keys and renamed some others to obtain consistency
   - most long tags shortened to a single keyword
   - added descriptive comments from MPLAB files
 - devicefiles.html files extended and updated for these changes
 - added support for ID memory with (added 'pragma ID <offset>,<size>')

externals:
 - sd_card - library to drive a SD Card storage media
 - seven_segment - library to drive a seven-segment LED display
 - 23k256 - library for microchip's fast serial sram
 - 24lc256 - library for microchip's 256kbit i2c eeprom

peripherals: